Java 9: new Float/Byte/Character is deprecated.